[package]
name = "arena-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = {version = "0.7", features = ["postgres", "runtime-tokio-rustls"]}
dotenvy = "0.15"
axum = "0.7"
tokio = { version = "1", features = ["full"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
bcrypt = "0.15"
jsonwebtoken = "9.3"

